// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the AnalysisResult component matches the snapshot 1`] = `
.c3 {
  width: 13px;
  height: 13px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c10 {
  width: 18px;
  height: 18px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

yoast-seo.g2[id="c2"] {
  content: "c3,c10,";
}

.c9 {
  box-sizing: border-box;
  min-width: 32px;
  display: inline-block;
  border: 1px solid #ccc;
  background-color: #a4286a;
  box-shadow: inset 0 2px 0 rgba( 93,35,122,0.7 );
  border-radius: 3px;
  cursor: pointer;
  padding: 0;
  height: 23px;
}

.c9:hover {
  border-color: #fff;
}

.c9:disabled {
  background-color: #f7f7f7;
  box-shadow: none;
  border: none;
  cursor: default;
}

yoast-seo.g44[id="c8"] {
  content: "c9,";
}

.c1 {
  min-height: 24px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

yoast-seo.g102[id="c0"] {
  content: "c1,";
}

.c5 {
  margin: 3px 11px 0 0;
}

yoast-seo.g103[id="c4"] {
  content: "c5,";
}

.c7 {
  margin: 0 16px 0 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

yoast-seo.g104[id="c6"] {
  content: "c7,";
}

<li
  className="c0 c1"
>
  <svg
    aria-hidden={true}
    className="c2 c3 yoast-svg-icon yoast-svg-icon-circle c4 c5"
    fill="blue"
    focusable="false"
    role="img"
    size="13px"
    viewBox="0 0 1792 1792"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
    />
  </svg>
  <p
    className="c6 c7"
    dangerouslySetInnerHTML={
      Object {
        "__html": "You're doing great!",
      }
    }
  />
  <button
    aria-label="SEOResult"
    aria-pressed={true}
    className="c8 c9"
    disabled={false}
    id="Result button"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="c2 c10 yoast-svg-icon yoast-svg-icon-eye"
      fill="#fff"
      focusable="false"
      role="img"
      size="18px"
      viewBox="0 0 1792 1792"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1664 960q-152-236-381-353 61 104 61 225 0 185-131.5 316.5t-316.5 131.5-316.5-131.5-131.5-316.5q0-121 61-225-229 117-381 353 133 205 333.5 326.5t434.5 121.5 434.5-121.5 333.5-326.5zm-720-384q0-20-14-34t-34-14q-125 0-214.5 89.5t-89.5 214.5q0 20 14 34t34 14 34-14 14-34q0-86 61-147t147-61q20 0 34-14t14-34zm848 384q0 34-20 69-140 230-376.5 368.5t-499.5 138.5-499.5-139-376.5-368q-20-35-20-69t20-69q140-229 376.5-368t499.5-139 499.5 139 376.5 368q20 35 20 69z"
      />
    </svg>
  </button>
</li>
`;

exports[`the AnalysisResult component with disabled buttons matches the snapshot 1`] = `
.c3 {
  width: 13px;
  height: 13px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c10 {
  width: 18px;
  height: 18px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

yoast-seo.g2[id="c2"] {
  content: "c3,c10,";
}

.c9 {
  box-sizing: border-box;
  min-width: 32px;
  display: inline-block;
  border: 1px solid #ccc;
  background-color: #a4286a;
  box-shadow: inset 0 2px 0 rgba( 93,35,122,0.7 );
  border-radius: 3px;
  cursor: pointer;
  padding: 0;
  height: 23px;
}

.c9:hover {
  border-color: #fff;
}

.c9:disabled {
  background-color: #f7f7f7;
  box-shadow: none;
  border: none;
  cursor: default;
}

yoast-seo.g44[id="c8"] {
  content: "c9,";
}

.c1 {
  min-height: 24px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

yoast-seo.g102[id="c0"] {
  content: "c1,";
}

.c5 {
  margin: 3px 11px 0 0;
}

yoast-seo.g103[id="c4"] {
  content: "c5,";
}

.c7 {
  margin: 0 16px 0 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

yoast-seo.g104[id="c6"] {
  content: "c7,";
}

<li
  className="c0 c1"
>
  <svg
    aria-hidden={true}
    className="c2 c3 yoast-svg-icon yoast-svg-icon-circle c4 c5"
    fill="blue"
    focusable="false"
    role="img"
    size="13px"
    viewBox="0 0 1792 1792"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
    />
  </svg>
  <p
    className="c6 c7"
    dangerouslySetInnerHTML={
      Object {
        "__html": "You're doing great!",
      }
    }
  />
  <button
    aria-label="SEOResult"
    aria-pressed={true}
    className="c8 c9"
    disabled={true}
    id="Result button"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="c2 c10 yoast-svg-icon yoast-svg-icon-eye"
      fill="#ddd"
      focusable="false"
      role="img"
      size="18px"
      viewBox="0 0 1792 1792"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1664 960q-152-236-381-353 61 104 61 225 0 185-131.5 316.5t-316.5 131.5-316.5-131.5-131.5-316.5q0-121 61-225-229 117-381 353 133 205 333.5 326.5t434.5 121.5 434.5-121.5 333.5-326.5zm-720-384q0-20-14-34t-34-14q-125 0-214.5 89.5t-89.5 214.5q0 20 14 34t34 14 34-14 14-34q0-86 61-147t147-61q20 0 34-14t14-34zm848 384q0 34-20 69-140 230-376.5 368.5t-499.5 138.5-499.5-139-376.5-368q-20-35-20-69t20-69q140-229 376.5-368t499.5-139 499.5 139 376.5 368q20 35 20 69z"
      />
    </svg>
  </button>
</li>
`;

exports[`the AnalysisResult component with hidden buttons matches the snapshot 1`] = `
.c3 {
  width: 13px;
  height: 13px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

yoast-seo.g2[id="c2"] {
  content: "c3,";
}

.c1 {
  min-height: 24px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

yoast-seo.g102[id="c0"] {
  content: "c1,";
}

.c5 {
  margin: 3px 11px 0 0;
}

yoast-seo.g103[id="c4"] {
  content: "c5,";
}

.c7 {
  margin: 0 16px 0 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

yoast-seo.g104[id="c6"] {
  content: "c7,";
}

<li
  className="c0 c1"
>
  <svg
    aria-hidden={true}
    className="c2 c3 yoast-svg-icon yoast-svg-icon-circle c4 c5"
    fill="blue"
    focusable="false"
    role="img"
    size="13px"
    viewBox="0 0 1792 1792"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
    />
  </svg>
  <p
    className="c6 c7"
    dangerouslySetInnerHTML={
      Object {
        "__html": "You're doing great!",
      }
    }
  />
</li>
`;

exports[`the AnalysisResult component with html in the text matches the snapshot 1`] = `
.c3 {
  width: 13px;
  height: 13px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c10 {
  width: 18px;
  height: 18px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

yoast-seo.g2[id="c2"] {
  content: "c3,c10,";
}

.c9 {
  box-sizing: border-box;
  min-width: 32px;
  display: inline-block;
  border: 1px solid #ccc;
  background-color: #a4286a;
  box-shadow: inset 0 2px 0 rgba( 93,35,122,0.7 );
  border-radius: 3px;
  cursor: pointer;
  padding: 0;
  height: 23px;
}

.c9:hover {
  border-color: #fff;
}

.c9:disabled {
  background-color: #f7f7f7;
  box-shadow: none;
  border: none;
  cursor: default;
}

yoast-seo.g44[id="c8"] {
  content: "c9,";
}

.c1 {
  min-height: 24px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

yoast-seo.g102[id="c0"] {
  content: "c1,";
}

.c5 {
  margin: 3px 11px 0 0;
}

yoast-seo.g103[id="c4"] {
  content: "c5,";
}

.c7 {
  margin: 0 16px 0 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

yoast-seo.g104[id="c6"] {
  content: "c7,";
}

<li
  className="c0 c1"
>
  <svg
    aria-hidden={true}
    className="c2 c3 yoast-svg-icon yoast-svg-icon-circle c4 c5"
    fill="blue"
    focusable="false"
    role="img"
    size="13px"
    viewBox="0 0 1792 1792"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
    />
  </svg>
  <p
    className="c6 c7"
    dangerouslySetInnerHTML={
      Object {
        "__html": "You're doing <b>great!</b>",
      }
    }
  />
  <button
    aria-label="SEOResult"
    aria-pressed={true}
    className="c8 c9"
    disabled={false}
    id="Result button"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="c2 c10 yoast-svg-icon yoast-svg-icon-eye"
      fill="#fff"
      focusable="false"
      role="img"
      size="18px"
      viewBox="0 0 1792 1792"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M1664 960q-152-236-381-353 61 104 61 225 0 185-131.5 316.5t-316.5 131.5-316.5-131.5-131.5-316.5q0-121 61-225-229 117-381 353 133 205 333.5 326.5t434.5 121.5 434.5-121.5 333.5-326.5zm-720-384q0-20-14-34t-34-14q-125 0-214.5 89.5t-89.5 214.5q0 20 14 34t34 14 34-14 14-34q0-86 61-147t147-61q20 0 34-14t14-34zm848 384q0 34-20 69-140 230-376.5 368.5t-499.5 138.5-499.5-139-376.5-368q-20-35-20-69t20-69q140-229 376.5-368t499.5-139 499.5 139 376.5 368q20 35 20 69z"
      />
    </svg>
  </button>
</li>
`;
